<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- <CheckBoxPreference
       android:key="example_checkbox"
       android:title="@string/pref_title_social_recommendations"
       android:summary="@string/pref_description_social_recommendations"
       android:defaultValue="true" />

   NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLength="30"
        android:maxLines="1" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->

    <ListPreference
        android:key="@string/pref_unit_key"
        android:title="@string/pref_unit_label"
        android:defaultValue="@string/pref_unit_default"
        android:entries="@array/units_array"
        android:entryValues="@array/units_array_values"
         />



</PreferenceScreen>
